<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="398dp"
        android:layout_height="244dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="432dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconbook" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="58dp"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/appfullname"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/capriola"
        android:text="@string/ver"
        android:textColor="@color/green"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="181dp"
        android:layout_height="86dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="175dp"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/developerinfo"
        android:textColor="@color/textcolor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>