<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="335dp"
        android:layout_height="98dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="664dp"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/appname"
        android:textColor="@color/green"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="272dp"
        android:layout_height="76dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/des"
        android:textColor="@color/textcolor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/buttonbackground" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="searchitem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/search" />

    <EditText
        android:id="@+id/input"
        android:layout_width="292dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/enter"
        android:inputType="textPersonName"
        android:textColor="@color/green"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="264dp"
        android:layout_height="297dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="124dp"
        android:onClick="DeveloperPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:srcCompat="@drawable/book2" />

    <TextView
        android:id="@+id/result"
        android:layout_width="275dp"
        android:layout_height="95dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/capriola"
        android:gravity="center|top"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>